# avar

./: .drone.yml  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  coverage.xml  daemon_transport.c.gcov  version.json
.agents/skills/c-api-design/: SKILL.md
.agents/skills/c-testing/: SKILL.md
.agents/skills/code-style/: SKILL.md
.agents/skills/cross-platform/: SKILL.md
.agents/skills/daemon-mode/: SKILL.md
.agents/skills/dependency-management/: SKILL.md
.agents/skills/download-engine/: SKILL.md
.agents/skills/download-manager-architecture/: SKILL.md
.agents/skills/extension-development/: BEHAVIOR.md  SKILL.md
.agents/skills/filesystem/: SKILL.md
.agents/skills/gui-code-style/: SKILL.md
.agents/skills/gui-help-docs/: SKILL.md
.agents/skills/http-client/: SKILL.md
.agents/skills/memory-safety/: SKILL.md
.agents/skills/network-programming/: SKILL.md
.agents/skills/parallel-downloads/: SKILL.md
.agents/skills/performance/: SKILL.md
.agents/skills/queue-management/: SKILL.md
.agents/skills/react-development/: SKILL.md
.agents/skills/security/: SKILL.md
.github/workflows/: ci.yml  release.yml
build-gui/: CMakeCache.txt
cmake/: AvarCoverage.cmake  AvarLink.cmake  AvarVersion.cmake
docs/: _config.yml  index.md
docs/_includes/i18n/: fa.liquid
docs/architecture/: README.md  config-file.md  daemon-mode.md  download-engine.md  overview.md  queues.md
docs/cli/: README.md  config.md  daemon.md  download.md  queue.md  url-shorthand.md
docs/extensions/: README.md  architecture.md  behavior.md  installation.md  protocol.md  usage.md
docs/getting-started/: README.md  configuration-overview.md  installation.md  quick-start.md
docs/gui/: README.md  building.md  console.md  downloads.md  layout.md  overview.md  queues.md  sessions.md  settings.md  shortcuts.md
examples/: docker-compose.yml
examples/helm/avar-daemon/: Chart.yaml  values.yaml
extensions/: .gitignore  README.md
extensions/chromium/: background.js  badge.js  content.js  context-menu.js  download-intercept.js  hls.js  manifest.json  media-hook.js  media.js  popup.html  popup.js  protocol.js
extensions/firefox/: background.js  capture.js  content.js  context-menu.js  download-intercept.js  hls.js  manifest.json  media.js  page-response-hook.js  popup.html  popup.js  protocol.js
extensions/shared/: capture.js  content.js  download-intercept.js  media.js  page-response-hook.js  popup.html  popup.js  protocol.js
gui/: .gitignore  README.md  dev-server.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite-extension-bridge.ts  vite-extensions.ts  vite-sw-cache.ts  vite.config.ts  vitest.config.ts
gui/desktop/: daemon-proxy.cjs  env.cjs  resolve-gui-url.cjs  shells.cjs  static-server.cjs
gui/docs/en/: console.md  downloads.md  index.md  layout.md  queues.md  sessions.md  settings.md  shortcuts.md
gui/docs/fa/: index.md  queues.md
gui/electrobun/: README.md  electrobun.config.ts  run-build.cjs  tsconfig.json  verify-build.cjs
gui/electrobun/shared/: avar-rpc.ts
gui/electron/: avar-protocol.cjs  extension-bridge.cjs  extension-protocol.cjs  main.cjs  ports.cjs  preload.cjs  tray-menu-icons.cjs
gui/public/: manifest.webmanifest  sw.js
gui/scripts/: build-desktop.cjs  generate-icons.cjs  install-tinytron.cjs  wait-dev-server-electrobun.cjs  wait-dev-server.cjs
gui/src/: App.tsx  electron.d.ts  main.tsx  vite-env.d.ts
gui/src/api/: checksumTypes.ts  daemon.ts  snapshot.test.ts  snapshot.ts  types.ts
gui/src/config/: ConfigContext.tsx  defaults.ts  storage.ts
gui/src/hooks/: useAppLocation.ts  useDirectoryPathMode.ts  useDownloadActions.ts  useDownloadDetails.ts  useDownloadDoubleClickAction.ts  useDownloadProgressWatch.ts  useDraggable.ts  useElectronTrayDownloads.ts  useElectronTrayLabels.ts  usePwaInstall.ts  useResize.ts  (+4 more)
gui/tiny/: README.md  main.cjs  verify-build.cjs
scripts/: build_all.py  compute_version.py  coverage_report.py  embed_electron.py  embed_gui.py  generate_version.py  http_test_server.py  package_release.py  package_tiny.py  paths.py  run_tests.sh
src/: cli.c  config.c  daemon.c  daemon_config.c  daemon_install.c  daemon_rpc.c  daemon_session.c  daemon_transport.c  download.c  download_config.c  download_io.c  download_probe.c  download_scheduler.c  download_segment.c  download_state.c  download_sync.c  file-system.c  file_checksum.c  http.c  http_proxy.c  instance.c  logger.c  main.c  mongoose_log.c  profile.c  queue.c  scheduler.c  stream_hls.c  system_stats.c  thread_pool.c  tls_debug.c  utils.c
src/cli/: avar.docopt  batch.docopt  cli.c  config.docopt  config_cli.c  daemon.docopt  daemon_cli.c  dispatch.c  download.docopt  download_cli.c  electron_embed.c  gui_launch.c  profile.docopt  profile_cli.c  queue.docopt  queue_cli.c  scheduler.docopt  scheduler_cli.c
src/daemon/: daemon.c  daemon_cli.c  daemon_config.c  daemon_install.c  daemon_rpc.c  daemon_session.c  daemon_transport.c
src/include/: avar.h  cli.h  config.h  daemon.h  daemon_rpc.h  daemon_session.h  daemon_transport.h  debug.h  download.h  download_config.h  download_io.h  download_probe.h  download_segment.h  download_state.h  download_sync.h  file-system.h  file_checksum.h  gui_embed.h  http.h  http_proxy.h  instance.h  logger.h  mongoose_log.h  profile.h  queue.h  scheduler.h  stream_hls.h  system_stats.h  thread_pool.h  tls_debug.h  utils.h
tests/: CMakeLists.txt  avar_test.h  test_cli.c  test_cli_handlers.c  test_config_array.c  test_config_env.c  test_config_persist.c  test_daemon.c  test_daemon_config.c  test_daemon_rpc.c  test_daemon_session.c  test_daemon_transport.c  test_download_config.c  test_download_integration.c  test_download_internals.c  test_download_lifecycle.c  test_download_segment.c  test_download_state.c  test_download_sync.c  test_file_checksum.c  test_file_system.c  test_guard.c  test_guard.h  test_http.c  test_http_proxy.c  test_instance.c  test_logger.c  test_queue.c  test_stream_hls.c  test_stream_hls_integration.c  test_support.c  test_system_stats.c  test_thread_pool.c  test_utils.c
(+160 files in other folders)
